--- a/programs-offered.html
+++ b/programs-offered.html
@@ -151,16 +151,17 @@
 </head>
 <body>
     <header>
-        <div class="hamburger" onclick="toggleMenu()">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </div>
-        <a href="index.html">
-            <img src="Images/logo-plain.png" alt="Divyataa Logo" class="logo-header">
-        </a>
-        <img src="Images/schoolname.png" style="max-width: 700px; height: auto;">
-    </header>
+      <div class="hamburger" onclick="toggleMenu()">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+      </div>
+      <a href="index.html">
+          <img src="Images/logo-plain.png" alt="Divyataa Logo" class="logo-header">
+      </a>
+      <h1 class="school-name-header">Divyataa Enriched Montessori Foundation</h1>
+  </header>
+
     <nav class="navbar">
         <ul class="nav-menu">
             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
