--- a/Contact-us.html
+++ b/Contact-us.html
@@ -143,4 +143,16 @@
         </div>
       </main>
 </body>
+<footer>
+  <footer>
+    <div class="footer-wrapper">
+      <div class="footer-details">
+        <h3>SMR - Pavalammal Educational Trust</h3>
+        <div class="footer-legal">
+          © 2025 Divyataa Enriched Montessori Foundation. Divyataa™ All rights reserved.
+        </div>
+      </div>
+    </div>
+  </footer>
+
 </html>
