--- a/about-montessori.html
+++ b/about-montessori.html
@@ -214,13 +214,15 @@
 
   <!-- Footer -->
   <footer>
-    <div class="footer-wrapper">
-      <div class="footer-details">
-        <h2>Contact Information</h2>
-        <p><strong>Address:</strong> Divyataa International School, 76/6, "PAVAL", Angeripalayam Main Road, Tirupur</p>
-        <p><strong>Call us:</strong> <a href="tel:+919751112300">9751112300</a></p>
-        <p><strong>Email:</strong> <a href="mailto:divyataa.info@gmail.com">divyataa.info@gmail.com</a></p>
-        <div class="social-media-buttons">
+    <footer>
+      <div class="footer-wrapper">
+        <div class="footer-details">
+          <h2>Contact Information</h2>
+          <h3>SMR - Pavalammal Educational Trust</h3>
+          <p><strong>Address:</strong> Divyataa International School, 76/6, "PAVAL", Park-In, Angeripalayam Main Road, Tirupur</p>
+          <p><strong>Call us:</strong> <a href="tel:+919751112300">9751112300</a></p>
+          <p><strong>Email:</strong> <a href="mailto:divyataa.info@gmail.com">divyataa.info@gmail.com</a></p>
+          <div class="social-media-buttons">
             <h2>Socials</h2>
             <a href="https://www.facebook.com/divyataa.divyataa.7" target="_blank" class="social-link">
               <i class="fab fa-facebook-f"></i> Facebook
@@ -231,14 +233,17 @@
             <a href="https://wa.me/919751112300" target="_blank" class="social-link">
               <i class="fab fa-whatsapp"></i> WhatsApp
             </a>
-          </div>          
+          </div>
+          <div class="footer-legal">
+            © 2025 Divyataa Enriched Montessori Foundation. Divyataa™ All rights reserved.
+          </div>
+        </div>
+        <div class="map-container">
+          <h2>Location</h2>
+          <iframe src="https://www.google.com/maps/embed/v1/place?q=divyataa+enriched+montessori+foundation&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8" allowfullscreen></iframe>
+        </div>
       </div>
-      <div class="map-container">
-        <h2>Location</h2>
-        <iframe src="https://www.google.com/maps/embed/v1/place?q=divyataa+enriched+montessori+foundation&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8" allowfullscreen></iframe>
-      </div>
-    </div>
-  </footer>
+    </footer>
   
 </body>
 </html>
