--- a/about-montessori.html
+++ b/about-montessori.html
@@ -106,7 +106,7 @@
     <a href="index.html">
       <img src="Images/logo-plain.png" alt="Divyataa Logo" class="logo-header">
     </a>
-    <h1 class="school-name-header">Divyataa Enriched Montessori Foundation</h1>
+    <h1 class="school-name-header">Divyataa International School</h1>
   </header>
 
   <nav class="navbar">
