--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="index.html">
             <img src="Images/logo-plain.png" alt="Divyataa Logo" class="logo-header">
         </a>
-        <h1 class="school-name-header">Divyataa Enriched Montessori Foundation</h1>
+        <h1 class="school-name-header">Divyataa International School</h1>
     </header>
     <nav class="navbar">
         <ul class="nav-menu">
@@ -44,23 +44,26 @@
     <div class="content">
         <div class="section">
             <h2 style="text-align: center; padding: 20px;">WARM WELCOME</h2>
-            <p style="text-align: center;">Divyataa is a Montessori house for the new era. We have embraced international Montessori approach and integrated strategies to impart 21st century skills of collaboration, communication, critical thinking and creativity. We value social-emotional learning, value education, focus and public speaking skills in par with STEAM fields of Science, Technology, Engineering, Arts and Mathematics. We have adopted phonetics, experiential learning, projects, roleplay, storytelling, and creative play as methodologies of teaching.</p>
+            <p style="text-align: center;">At Divyataa, we believe that every child carries a spark of brilliance within. We are more than just a school—we are a Montessori house for the new era, committed to nurturing young minds through a blend of timeless Montessori principles and innovative 21st-century learning strategies.
+              Rooted in the globally recognized Montessori philosophy, our educational approach encourages children to explore, question, and create. We have thoughtfully integrated STEAM (Science, Technology, Engineering, Arts, and Mathematics) education with key life skills such as collaboration, communication, critical thinking, creativity, focus, emotional intelligence, and public speaking.
+              Through phonics-based literacy, hands-on projects, roleplay, storytelling, and experiential learning, we help children build a strong foundation—not just for academics, but for life.</p>
         </div>
         <div class="section">
             <h2 style="text-align: center; padding: 20px;">Our Vision</h2>
-            <p style="text-align: center;">At Divyataa Enriched Montessori Foundation, our vision is to nurture the innate curiosity and creativity of every child. We strive to create an environment where children feel empowered to explore, innovate, and grow into confident, compassionate leaders of tomorrow.</p>
+            <p style="text-align: center;">To inspire, empower, and nurture the natural curiosity, creativity, and potential of every child. At Divyataa Enriched Montessori Foundation, we envision a future where children grow up to be confident, compassionate, and responsible leaders who contribute meaningfully to their communities and the world.</p>
         </div>
         <div class="section">
             <h2 style="text-align: center; padding: 20px;">Our Mission</h2>
-            <p style="text-align: center;">Our mission is to provide a holistic education that balances academic excellence with emotional well-being. We aim to cultivate a love for learning, respect for others, and a sense of responsibility towards the community and the environment.</p>
+            <p style="text-align: center;">To provide a nurturing, inclusive, and inspiring learning environment that fosters holistic development. We aim to balance academic excellence with emotional well-being, instill lifelong learning habits, and cultivate respect for people and nature alike.
+            </p>
         </div>
         <div class="section">
             <h2 style="text-align: center; padding: 20px;">Why Choose Divyataa?</h2>
             <ul style="text-align: center;">
-                <li><strong>Child-Centered Learning:</strong> Our Montessori approach ensures that each child progresses at their own pace, discovering their strengths and interests.</li>
-                <li><strong>Experienced Educators:</strong> Our teachers are trained in both traditional Montessori methods and modern educational techniques, ensuring a well-rounded learning experience.</li>
-                <li><strong>Safe and Nurturing Environment:</strong> We prioritize the safety and well-being of our students, creating a supportive atmosphere where they can thrive.</li>
-                <li><strong>Parental Involvement:</strong> We believe in strong partnerships with parents and provide regular updates and opportunities for involvement in the school community.</li>
+                <li><strong>Child-Centered Learning:</strong> Each child is unique. Our Montessori classrooms are designed to support individualized learning paths, allowing children to learn at their own pace while discovering their passions and talents.</li>
+                <li><strong>Experienced Educators:</strong> Our dedicated teachers are certified in both traditional Montessori methods and modern pedagogical techniques. They serve as guides who spark curiosity, encourage independence, and nurture growth.</li>
+                <li><strong>Safe and Nurturing Environment:</strong> We provide a secure and welcoming campus where children feel emotionally and physically safe. Our environment encourages exploration, self-expression, and joyful learning.</li>
+                <li><strong>Parental Involvement:</strong>We value the vital role of parents in a child’s education. Through regular communication, events, and collaborative initiatives, we ensure families remain an integral part of their child’s learning journey.</li>
             </ul>
         </div>
         <!-- Rest of the home page content -->
